--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- СВОЇ CSS СТИЛІ ПИСАТИ ТІЛЬКИ ПІД CSS BOOTSTRAP ЩОБ ВОНИ НЕ ПЕРЕКРИВАЛИСЯ  -->
+    
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
     <title>Online shop</title>
 </head>
 
@@ -26,13 +31,13 @@
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#products">Products</a>
+                            <a class="nav-link smooth" href="#products">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacts">Contacts</a>
+                            <a class="nav-link smooth" href="#contacts">Contacts</a>
                         </li>
                     </ul>
-                    <p><a href="">Cart</a></p>
+                    <p><a href=""><i class="fas fa-shopping-cart"></i>Cart</a></p>
                 </div>
             </nav>
             <div class="banner">
@@ -66,7 +71,143 @@
         </header>
         <main>
             <h2 id="products">Products</h2>
-            <div class="products-container"></div>
+            <div class="products-container row">
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#productInfoModal">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla2.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla3.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla2.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla3.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla2.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla3.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla2.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla3.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla2.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla2</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+                <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+                    <img src="img/tesla3.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla3</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-primary">Info</a>
+                        <a href="#" class="btn btn-primary">Buy</a>
+                    </div>
+                </article>
+            </div>
         </main>
         <footer>
             <h2 id="contacts">Contacts</h2>
@@ -78,8 +219,31 @@
 
 
 
+    <!-- МОДАЛЛЬНІ ВІКНА ЗАВЖДИ ІДУТЬ В КІНЦІ ТЕГА BODY ПЕРЕД СКРІПТАМИ-->
 
-
+    <!-- Modal -->
+    <div class="modal fade" id="productInfoModal" tabindex="-1" role="dialog" aria-labelledby="productInfoModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="productInfoModalTitle">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+                </div>
+                <div class="modal-body">
+                    <img src="img/tesla1.jpg" class="card-img-top" alt="tesla">
+                    <div class="card-body">
+                        <h5 class="card-title">Tesla1</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
@@ -87,7 +251,7 @@
 
     <!-- ЦЕЙ СКРІПТ ЗАВЖДИ В КІНЦІ -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
 </body>
 
 </html>
